Add nodes created count

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <p id="query-state"></p>
             </div>
             <div id="choose-screen">
+                <p><span id="nodes-created"></span> nodes created.</p>
                 <p>Select the starting node and goal node from the map, then choose a search type.</p>
                 <p id="start-node-id-p">Start: <span id="start-node-id"></span></p>
                 <p id="goal-node-id-p">Goal: <span id="goal-node-id"></span></p>
